--- a/manifest.json
+++ b/manifest.json
@@ -337,5 +337,9 @@
             "repo": "zenoss/ZenPacks.zenoss.WebScale", 
             "ref": "master"
         }
+        "zenpacks/ZenPacks.zenoss.Import4": {
+            "repo": "zenoss/ZenPacks.zenoss.Import4",
+            "ref": "develop"
+        }
     }
 }
