--- a/manifest.json
+++ b/manifest.json
@@ -317,6 +317,10 @@
             "repo": "zenoss/ZenPacks.zenoss.vCloud", 
             "ref": "master"
         }, 
+        "zenpacks/ZenPacks.zenoss.Import4": {
+            "repo": "zenoss/ZenPacks.zenoss.Import4",
+            "ref": "develop"
+        },
         "core": {
             "repo": "zenoss/zenoss-prodbin", 
             "ref": "develop"
