Freeze the 5.0.0/1.0.0 release manifest

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
         }, 
         "zep": {
             "repo": "zenoss/zenoss-zep", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.ZenSQLTx": {
             "repo": "zenoss/ZenPacks.zenoss.ZenSQLTx", 
@@ -22,7 +22,7 @@
         }, 
         "golang/src/github.com/zenoss/zminion": {
             "repo": "git@github.com:zenoss/zminion", 
-            "ref": "support/5.0.x", 
+            "ref": "5.0.0", 
             "name": "golang/src/github.com/zenoss/zminion"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.BrocadeMonitor": {
@@ -35,7 +35,7 @@
         }, 
         "golang/src/github.com/zenoss/metricshipper": {
             "repo": "zenoss/metricshipper", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.BigIpMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.BigIpMonitor", 
@@ -79,7 +79,7 @@
         }, 
         "core": {
             "repo": "zenoss/zenoss-prodbin", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.vSphere": {
             "repo": "zenoss/ZenPacks.zenoss.vSphere", 
@@ -135,7 +135,7 @@
         }, 
         "golang/src/github.com/control-center/serviced": {
             "repo": "control-center/serviced", 
-            "ref": "support/1.0.x"
+            "ref": "1.0.0"
         }, 
         "zenpacks/ZenPacks.zenoss.ZenossVirtualHostMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.ZenossVirtualHostMonitor", 
@@ -207,12 +207,12 @@
         }, 
         "service": {
             "repo": "zenoss/zenoss-service", 
-            "ref": "support/5.0.x", 
+            "ref": "5.0.0", 
             "name": "service"
         }, 
         "../build": {
             "repo": "zenoss/platform-build", 
-            "ref": "support/5.0.x", 
+            "ref": "5.0.0", 
             "name": "build"
         }, 
         "zenpacks/ZenPacks.zenoss.XenMonitor": {
@@ -237,7 +237,7 @@
         }, 
         "protocols": {
             "repo": "zenoss/zenoss-protocols", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.StorageBase": {
             "repo": "zenoss/ZenPacks.zenoss.StorageBase", 
@@ -249,7 +249,7 @@
         }, 
         "metric-service": {
             "repo": "zenoss/query", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "zenpacks/ZenPacks.zenoss.NtpMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.NtpMonitor", 
@@ -277,7 +277,7 @@
         }, 
         "utils": {
             "repo": "zenoss/zenoss-utils", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "zenpacks/ZenPacks.zenoss.DnsMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.DnsMonitor", 
@@ -285,7 +285,7 @@
         }, 
         "zauth-service": {
             "repo": "zenoss/zauth-service", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "zenpacks/ZenPacks.zenoss.DellMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.DellMonitor", 
@@ -313,11 +313,11 @@
         }, 
         "zproxy": {
             "repo": "zenoss/zproxy", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "metric-consumer": {
             "repo": "zenoss/zenoss.metric.consumer", 
-            "ref": "support/5.0.x"
+            "ref": "5.0.0"
         }, 
         "enterprise_zenpacks/ZenPacks.zenoss.ZenMailTx": {
             "repo": "zenoss/ZenPacks.zenoss.ZenMailTx", 
