--- a/manifest.json
+++ b/manifest.json
@@ -104,6 +104,10 @@
             "repo": "control-center/serviced", 
             "ref": "develop"
         }, 
+        "golang/src/github.com/control-center/service-migration": {
+            "repo": "control-center/service-migration",
+            "ref": "develop"
+        },
         "zenpacks/ZenPacks.zenoss.HPMonitor": {
             "repo": "zenoss/ZenPacks.zenoss.HPMonitor", 
             "ref": "master"
